       They are still provided by the commands that need them.
     - Replaced the undocumented `--dir` alias for `--top-dir` with `-D` to
       prevent a conflict with the `bundle` command's alias for `--dest-dir`.
     - Changed the alias for the core `--plan-file` option from `-f` to `-P`
       to prevent conflicts with command options.
     - Changed the alias for the core `--verbose` option from `-v` to `-V` so
       that all core option single-letter aliases are uppercase.
     - Removed the deprecated core `--engine` option. The `init` command still
       supports it, while other commands are able to parse the engine name as
       an argument, e.g., `sqitch deploy mysql`.
     - Removed the `--verbose` option from the `engine` and `target` commands.
       They now respect the core `--verbose` option, so should continue to
       work as before.

0.9998 2018-10-03T20:53:58Z
     - Fixed an issue where Sqitch would sometimes truncate the registry
       version number fetched from MySQL, most likely because the Perl runtime
       was using 32-bit integers. Fixed by casting the version to CHAR in the
       query, before Perl ever see it. Thanks to Allen Godfrey David for the
       report.
     - Added the Snowflake engine.
     - Now require URI::db v0.19 for Snowflake URI support.
     - The Vertica and Exasol engines now require DBD::ODBC 1.59, which fixes
       a Unicode issue. Thanks to Martin J. Evans for the quick fix
       (perl5-dbi/DBD-ODBC#8)!
     - Added the `bundle` command to `./Build`. This command installs only the
       runtime dependencies into the `--install_base` directory. This should
       simplify building distribution packages, binary installs, Docker images,
       and the like.
     - Added the `--with` option to `./Build`, to require that Sqitch be build
       with the specified engine. Pass once for each engine. See the README
       for the list of supported engines.