@@ -95,8 +95,9 @@ Revision history for Perl extension App::Sqitch
        prevent a conflict with the `bundle` command's alias for `--dest-dir`.
      - Changed the alias for the core `--plan-file` option from `-f` to `-P`
        to prevent conflicts with command options.
-     - Changed the alias for the core `--verbose` option from `-v` to `-V` so
-       that all core option single-letter aliases are uppercase.
+     - Added `-V` as an alias for the core `--verbose` option so that all core
+       option single-letter aliases are uppercase. The `-v` option still
+       exists, but is no longer documented, and may be removed in the future.
      - Removed the deprecated core `--engine` option. The `init` command still
        supports it, while other commands are able to parse the engine name as
        an argument, e.g., `sqitch deploy mysql`.
